# Notes-Rust

01-getting-started/: README.md  hellow-world.rs
01-getting-started/hello-rust/: Cargo.toml
03-common-concepts/: 01-variables.rs
